[package]
name = "qf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.108", features = ["derive"] }
serde_json = "1.0.108"
regex = "1.10.6"
thiserror = "1.0.63"
